<resources>
    <string name="app_name">GithubAppsFinal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_explore">Explore</string>
    <string name="title_info">Info</string>
    <string name="title_setting">Setting</string>
    <string name="title_actionbar">Github</string>

    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>
    <string name="titleOnFragementHome">Users</string>
    <string name="textName">Nickname</string>
    <string name="textUsername">Nickname</string>
    <string name="github_url">Github Url</string>
    <string name="name">Nama</string>
    <string name="bio">Tidak ada bio</string>
    <string name="follower">Follower</string>
    <string name="value_following">1000</string>
    <string name="value_followers">1000</string>
    <string name="following">Following</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="email">Email</string>
    <string name="term">Developer by Alvin Pradana Antony</string>
    <string name="fitur3">Desain antarmuka yang sederhana dan intuitif membuat aplikasi mudah digunakan bahkan bagi pengguna yang belum terbiasa dengan teknologi.</string>
    <string name="fitur2">Menampilkan detail data user dan follower dan following dari GitHub melalui REST API</string>
    <string name="fitur1">Menampilkan list data user dari GitHub melalui REST API, membuat pengalaman pengguna lebih interaktif dan menyenangkan.</string>
    <string name="versi_apps">Versi 1.0.0:</string>
    <string name="subtitle_logo">apps</string>

    <string name="favbutton" translatable="false">favButton</string>
    <string name="text_favourite">Users Favourite</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="sw_dark_theme">Dark Theme</string>
</resources>