<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="false"
        app:elevation="0dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_White"
            android:fitsSystemWindows="true"
            app:expandedTitleGravity="center"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_marginTop="36dp"
                    android:clickable="true"
                    android:src="@drawable/placeholder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_userdetail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nunitosans_boldd"
                    android:text="@string/name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintEnd_toEndOf="@+id/iv_photo"
                    app:layout_constraintStart_toStartOf="@+id/iv_photo"
                    app:layout_constraintTop_toBottomOf="@+id/iv_photo" />

                <TextView
                    android:id="@+id/tv_userdetail_nick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    android:text="Nickname"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    app:layout_constraintEnd_toEndOf="@+id/tv_userdetail_name"
                    app:layout_constraintStart_toStartOf="@+id/tv_userdetail_name"
                    app:layout_constraintTop_toBottomOf="@+id/tv_userdetail_name" />

                <TextView
                    android:id="@+id/tv_userdetail_bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginTop="12dp"
                    android:textAlignment="center"
                    android:text="@string/bio"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:textColor="@color/color_White"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@+id/tv_userdetail_nick"
                    app:layout_constraintStart_toStartOf="@+id/tv_userdetail_nick"
                    app:layout_constraintTop_toBottomOf="@+id/tv_userdetail_nick" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tv_userdetail_nick"
                    app:layout_constraintStart_toStartOf="@+id/tv_userdetail_nick"
                    app:layout_constraintTop_toBottomOf="@+id/tv_userdetail_bio"
                    app:layout_constraintVertical_bias="0.07999998">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/people_group_24dp"
                        app:tint="@color/color_White" />

                    <TextView
                        android:id="@+id/tv_follower_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/value_followers"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follower"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:textColor="#ABABB2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:textColor="#ABABB2"
                        android:textSize="16sp"
                        tools:text="•" />

                    <TextView
                        android:id="@+id/tv_following_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/value_following"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:textColor="#ABABB2" />
                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="10dp"
                    app:cardBackgroundColor="@color/background_White"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:strokeColor="#EDEDED"
                    app:strokeWidth="1dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/view_company"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/iv_company"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginTop="12dp"
                                android:src="@drawable/domain_fill0_wght400_grad0_opsz48"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_company"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="6dp"
                                android:layout_marginEnd="14dp"
                                android:text="@string/company"
                                app:layout_constraintBottom_toBottomOf="@+id/iv_company"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/iv_company"
                                app:layout_constraintTop_toTopOf="@+id/iv_company" />

                            <View
                                style="@style/Divider"
                                android:layout_marginTop="12dp"
                                app:layout_constraintEnd_toEndOf="@+id/tv_company"
                                app:layout_constraintStart_toStartOf="@+id/iv_company"
                                app:layout_constraintTop_toBottomOf="@+id/tv_company" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/view_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:id="@+id/iv_location"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginTop="12dp"
                                android:src="@drawable/outline_location_on_24"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_location"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="6dp"
                                android:layout_marginEnd="14dp"
                                android:text="@string/location"
                                app:layout_constraintBottom_toBottomOf="@+id/iv_location"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/iv_location"
                                app:layout_constraintTop_toTopOf="@+id/iv_location" />

                            <View
                                style="@style/Divider"
                                android:layout_marginTop="12dp"
                                app:layout_constraintEnd_toEndOf="@+id/tv_location"
                                app:layout_constraintStart_toStartOf="@+id/iv_location"
                                app:layout_constraintTop_toBottomOf="@+id/tv_location" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/view_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/iv_mail"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="12dp"
                                android:layout_marginTop="12dp"
                                android:src="@drawable/outline_email_24"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_mail"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="6dp"
                                android:layout_marginEnd="14dp"
                                android:text="@string/email"
                                app:layout_constraintBottom_toBottomOf="@+id/iv_mail"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/iv_mail"
                                app:layout_constraintTop_toTopOf="@+id/iv_mail" />

                            <View
                                style="@style/Divider"
                                android:layout_marginTop="12dp"
                                app:layout_constraintEnd_toEndOf="@+id/tv_mail"
                                app:layout_constraintStart_toStartOf="@+id/iv_mail"
                                app:layout_constraintTop_toBottomOf="@+id/iv_mail" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_White"
            app:tabBackground="@color/white"
            app:tabIndicatorColor="@color/item_color_active"
            app:tabSelectedTextColor="@color/item_color_active"
            app:tabTextColor="@color/color_deeppurple" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            tools:visibility="visible"/>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>